array problem solved

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -22,7 +22,7 @@
         "cstdint": "cpp",
         "cstdio": "cpp",
         "cstdlib": "cpp",
-        "cstring": "cpp",
+        "cstr": "cpp",
         "ctime": "cpp",
         "cuchar": "cpp",
         "cwchar": "cpp",
@@ -46,8 +46,8 @@
         "ratio": "cpp",
         "regex": "cpp",
         "set": "cpp",
-        "string": "cpp",
-        "string_view": "cpp",
+        "str": "cpp",
+        "str_view": "cpp",
         "system_error": "cpp",
         "tuple": "cpp",
         "type_traits": "cpp",
