--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -14,7 +14,7 @@
             "cwd": "C:\\MinGW\\bin",
             "environment": [],
             "MIMode": "gdb",
-            "miDebuggerPath": "C:\\MinGW\bin\\gdb.exe",
+            "miDebuggerPath": "C:\\MinGW\\bin\\gdb.exe",
             "setupCommands": [
                 {
                     "description": "Enable pretty-printing for gdb",
